Runs AJAX tests forever. Adds log out URL (https://github.com/Reposoft/openidc-keycloak-test/issues/1)

--- a/openidc1/html-ajax/protected/index.html
+++ b/openidc1/html-ajax/protected/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <h1>Protected page</h1>
-    <p>You're authenticated<p>
+    <p>You're authenticated.
+      <a href="http://keycloak:8080/auth/realms/Testrealm/protocol/openid-connect/logout?redirect_uri=http://openidc">
+        Log out
+      </a>.
+    <p>
     <ul id="log"/>
     <!-- page content -->
   </body>
