--- a/openidc1/html-ajax/index.html
+++ b/openidc1/html-ajax/index.html
@@ -5,6 +5,16 @@
     <title>mod_auth_openidc with Keycloak test</title>
     <link rel="stylesheet" href="style.css">
   <body>
+    <h2>Initial setup</h2>
+    <p>
+      You need to import a testing realm into Keycloak.
+      Login at <a href="http://keycloak:8080/">http://keycloak:8080/</a>
+      (URL depends on your hosts file) using <code>admin:openidctest</code>.
+      In <a href="http://keycloak:8080/auth/admin/master/console/#/create/realm">create realm</a>
+      use the file Testrealm-realm.json from <code>keycloak-setup/exports</code>.
+      Then import Testrealm-users-0.json as
+      <a href="http://keycloak:8080/auth/admin/master/console/#/realms/Testrealm/partial-import">Partial import</a>.
+    </p>
     <h2>Auth testing</h2>
     <p>Go to <a href="/protected">/protected</a> to log in.</p>
     <p>The user is <code>test1:test1</code> user, if Keycloak realm import worked.</p>
