--- a/openidc1/html-ajax/protected/index.html
+++ b/openidc1/html-ajax/protected/index.html
@@ -14,7 +14,12 @@
         Log out
       </a>.
     <p>
-    <ul id="log"/>
+    <ul id="log">
+    </ul>
+    <p>If you're running shared state with a second container,
+      you're now also authenticated at <a href="http://openidc:2080/">http://openidc:2080/</a>
+      without any extra keycloak roundtrips.
+    </p>
     <!-- page content -->
   </body>
 </html>
