Tweaks the multi-apache case a tiny bit

--- a/openidc1/html-ajax/protected/index.html
+++ b/openidc1/html-ajax/protected/index.html
@@ -17,7 +17,7 @@
     <ul id="log">
     </ul>
     <p>If you're running shared state with a second container,
-      you're now also authenticated at <a href="http://openidc:2080/">http://openidc:2080/</a>
+      you're now also authenticated at <a href="http://openidc:2080/protected/">http://openidc:2080/protected/</a>
       without any extra keycloak roundtrips.
     </p>
     <!-- page content -->
