Tries to sort out how to build a valid logout url. Works but ends up with a keycloak page saying 'Session not active.'

--- a/openidc1/html-ajax/protected/index.html
+++ b/openidc1/html-ajax/protected/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Protected page</h1>
     <p>You're authenticated.
-      <a href="http://keycloak:8080/auth/realms/Testrealm/protocol/openid-connect/logout?redirect_uri=http://openidc">
+      <a href="/logout">
         Log out
       </a>.
     <p>
