--- a/openidc1/html-ajax/protected/index.html
+++ b/openidc1/html-ajax/protected/index.html
@@ -35,6 +35,9 @@
       </dl>
     </form>
     <p>See also <a href="http://stackoverflow.com/questions/30222676/pingfederate-oauth-validate-access-token-using-apache-integration-kit">http://stackoverflow.com/questions/30222676/pingfederate-oauth-validate-access-token-using-apache-integration-kit</a>.</p>
+    <pre>
+      Other example, not via mod_auth_openidc: https://github.com/keycloak/keycloak/blob/190a1beefacd2c24dbd808f02e25be7db4fe1c47/examples/providers/domain-extension/invoke-authenticated.sh
+    </pre>
 
     <h2>AJAX (timeout, OIDCUnAuthAction, etc) testing</h2>
     <ul id="log"/>
