--- a/build-contracts/html-ajax/protected/index.html
+++ b/build-contracts/html-ajax/protected/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Protected page</h1>
     <p>You're authenticated.
-      <a href="/logout">
+      <a href="/logout/do">
         Log out
       </a>.
     <p>
