--- a/build-contracts/html-ajax/protected/index.html
+++ b/build-contracts/html-ajax/protected/index.html
@@ -14,6 +14,7 @@
         Log out
       </a>.
     <p>
+    <p>See <a href="cgi/printenv">environment variables</a></p>
     <ul id="log"/>
     <!-- page content -->
   </body>
