Exemplifies https://github.com/pingidentity/mod_auth_openidc/wiki/Single-Page-Applications

--- a/build-contracts/html-ajax/protected/index.html
+++ b/build-contracts/html-ajax/protected/index.html
@@ -14,7 +14,10 @@
         Log out
       </a>.
     <p>
-    <p>See <a href="cgi/printenv">environment variables</a></p>
+    <p>
+      See <a href="cgi/printenv">environment variables</a>
+      and <a href="/protected/redirect_uri?info=json">session info</a>
+    </p>
     <ul id="log"/>
     <!-- page content -->
   </body>
