--- a/build-contracts/html-ajax/protected/index.html
+++ b/build-contracts/html-ajax/protected/index.html
@@ -14,11 +14,12 @@
         Log out
       </a>.
     <p>
-    <p>
-      See <a href="cgi/printenv">environment variables</a>
-      and <a href="/protected/redirect_uri?info=json">session info</a>
+    <ul id="log">
+    </ul>
+    <p>If you're running shared state with a second container,
+      you're now also authenticated at <a href="http://openidc:2080/protected/">http://openidc:2080/protected/</a>
+      without any extra keycloak roundtrips.
     </p>
-    <ul id="log"/>
     <!-- page content -->
   </body>
 </html>
