Demonstrates that cache is effective: disable redis in conf to get an error on 2080

--- a/build-contracts/html-ajax/protected/index.html
+++ b/build-contracts/html-ajax/protected/index.html
@@ -19,6 +19,7 @@
     <p>If you're running shared state with a second container,
       you're now also authenticated at <a href="http://openidc:2080/protected/">http://openidc:2080/protected/</a>
       without any extra keycloak roundtrips.
+      That is until next revalidation, which :2080 will fail to do: it's intentionally blocked from reaching keycloak.
     </p>
     <!-- page content -->
   </body>
